test(continuousMoveStrategy): 룩/비숍/퀸의 이동 전략에 대해 각각 테스트 케이스 적용